src/snapshots/file_viewer__tests__after_ctrl_d.snap
---
source: src/main.rs
expression: terminal.backend()
---
"line 4              "
"line 5              "
"line 6              "
"line 7              "
"                    "
