src/snapshots/file_viewer__tests__after_ctrl_u.snap
---
source: src/main.rs
expression: terminal.backend()
---
"line 1              "
"line 2              "
"line 3              "
"line 4              "
"line 5              "
