src/snapshots/file_viewer__tests__colon_enters_command_mode.snap
---
source: src/main.rs
assertion_line: 741
expression: terminal.backend()
---
"hello               "
"                    "
"                    "
"                    "
":                   "
