src/snapshots/file_viewer__tests__command_help_opens_help_screen.snap
---
source: src/main.rs
expression: terminal.backend()
---
"File Viewer Help    "
"                    "
"Normal mode:        "
"v - Start visual    "
"mode                "
"V - Start visual    "
"line mode           "
"g - gg goto first   "
"line                "
"? - Show this help  "
"G - Goto last line  "
"/ - Search          "
"n - Next search hit "
"N - Prev search hit "
": - Command mode    "
"q - Quit            "
"h - Move left       "
"j - Move down       "
"k - Move up         "
"l - Move right      "
