src/snapshots/file_viewer__tests__command_q_ui.snap
---
source: src/main.rs
expression: terminal.backend()
---
"hello               "
"world               "
"                    "
"                    "
":q                  "
