src/snapshots/file_viewer__tests__help_screen.snap
---
source: src/main.rs
assertion_line: 706
expression: terminal.backend()
---
"       q: quit      "
"       ?: help      "
"    h/j/k/l: move   "
"   g/G: top/bottom  "
"      /: search     "
