src/snapshots/file_viewer__tests__initial_ui_snapshot.snap
---
source: src/main.rs
expression: terminal.backend()
---
"hello               "
"world               "
"                    "
"                    "
"                    "
