src/snapshots/file_viewer__tests__overlay_render_inline.snap
---
source: src/main.rs
expression: terminal.backend()
---
"line1               "
"| note              "
"line2               "
"                    "
"                    "
