src/snapshots/file_viewer__tests__slash_enters_search_mode.snap
---
source: src/main.rs
assertion_line: 755
expression: terminal.backend()
---
"hello               "
"                    "
"                    "
"                    "
"/                   "
