src/snapshots/file_viewer__tests__visual_line_mode_indicator.snap
---
source: src/main.rs
expression: terminal.backend()
---
"hello               "
"                    "
"                    "
"                    "
"-- VISUAL LINE --   "
